--- a/RustContainer/Cargo.toml
+++ b/RustContainer/Cargo.toml
@@ -1,9 +1,49 @@
 [package]
-name = "RustContainer"
-version = "0.1.0"
-authors = ["PvasquezF <alexanderpavelv32@gmail.com>"]
+name = "tera"
+version = "1.2.0"
+authors = ["Vincent Prouillet <hello@prouilletvincent.com>"]
+license = "MIT"
+readme = "README.md"
+description = "Template engine based on Jinja2/Django templates"
+homepage = "https://tera.netlify.com/"
+repository = "https://github.com/Keats/tera"
+keywords = ["template", "html", "django", "markup", "jinja2"]
+categories = ["template-engine"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+globwalk = "0.8"
+serde = "1.0"
+serde_json = "1.0"
+pest = "2"
+pest_derive = "2"
+lazy_static = "1.0"
+# used in striptags & titles filters. Already pulled by globwalk
+regex = "1.0"
+
+# used in slugify filter
+slug = {version = "0.1", optional = true}
+# used in urlencode filter
+percent-encoding = {version = "2", optional = true}
+# used in filesizeformat filter
+humansize = {version = "1", optional = true}
+# used in date format filter
+chrono = {version = "0.4", optional = true}
+chrono-tz = {version = "0.5", optional = true}
+# used in truncate filter
+unic-segment = {version = "0.9", optional = true}
+# used in get_random function
+rand = {version = "0.7", optional = true}
+
+[dev-dependencies]
+serde_derive = "1.0"
+pretty_assertions = "0.6"
+tempfile = "3"
+
+[features]
+default = ["builtins"]
+builtins = ["slug", "percent-encoding", "humansize", "chrono", "chrono-tz", "unic-segment", "rand"]
+preserve_order = ["serde_json/preserve_order"]
+
+[badges]
+maintenance = { status = "actively-developed" }
