--- a/RustContainer/Cargo.toml
+++ b/RustContainer/Cargo.toml
@@ -12,6 +12,8 @@ categories = ["template-engine"]
 edition = "2018"
 
 [dependencies]
+reqwest = "0.9.14"
+futures = "0.1.21"
 maud = "*"
 rouille = "3.0.0"
 tera = "1"
