--- a/RustContainer/Cargo.toml
+++ b/RustContainer/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2018"
 [dependencies]
 rouille = "3.0.0"
 reqwest = "0.9.14"
+tokio = "0.1.18"
+futures = "0.1.21"
 
 [dependencies.redis]
 version = "*"
