--- a/RustContainer/Cargo.toml
+++ b/RustContainer/Cargo.toml
@@ -4,10 +4,10 @@ version = "1.2.0"
 edition = "2018"
 
 [dependencies]
+openssl-sys = "0.9.29"
 rouille = "3.0.0"
 reqwest = "0.9.14"
 tokio = "0.1.18"
 futures = "0.1.21"
-
 [dependencies.redis]
 version = "*"
