--- a/RustContainer/Cargo.toml
+++ b/RustContainer/Cargo.toml
@@ -10,5 +10,6 @@ reqwest = "0.9.14"
 tokio = "0.1.18"
 futures = "0.1.21"
 serde = { version = "1.0", features = ["derive"] }
+serde_derive = "1.0.106"
 [dependencies.redis]
 version = "*"
