--- a/RustContainer/Cargo.toml
+++ b/RustContainer/Cargo.toml
@@ -1,7 +1,15 @@
 [package]
 name = "pavel"
-version = "1.0"
-edition = "2020"
+version = "1.2.0"
+authors = ["Vincent Prouillet <hello@prouilletvincent.com>"]
+license = "MIT"
+readme = "README.md"
+description = "Template engine based on Jinja2/Django templates"
+homepage = "https://tera.netlify.com/"
+repository = "https://github.com/Keats/tera"
+keywords = ["template", "html", "django", "markup", "jinja2"]
+categories = ["template-engine"]
+edition = "2018"
 
 [dependencies]
 openssl-sys = "0.9.29"
