--- a/RustContainer/Cargo.toml
+++ b/RustContainer/Cargo.toml
@@ -19,6 +19,7 @@ reqwest = "0.9.14"
 tokio = "0.1.18"
 futures = "0.1.21"
 serde = { version = "1.0", features = ["derive"] }
+time = { version = "0.2", default-features = false }
 serde_derive = "1.0.106"
 chrono = "0.4"
 
