--- a/PythonContainer/Dockerfile
+++ b/PythonContainer/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get update && \
 
 FROM build AS build-venv
 COPY requirements.txt /requirements.txt
-RUN /venv/bin/pip install --disable-pip-version-check -r /requirements.txt
+RUN /venv/bin/pip install --disable-pip-version-check -r redis flask
 
 FROM gcr.io/distroless/python3-debian10
 COPY --from=build-venv /venv /venv
