--- a/PythonContainer/Dockerfile
+++ b/PythonContainer/Dockerfile
@@ -12,4 +12,5 @@ FROM gcr.io/distroless/python3-debian10
 COPY --from=build-venv /venv /venv
 COPY . /app
 WORKDIR /app
+RUN ls
 ENTRYPOINT ["/venv/bin/python3", "index.py"]
