--- a/PythonContainer/Dockerfile
+++ b/PythonContainer/Dockerfile
@@ -13,4 +13,4 @@ COPY --from=build-venv /venv /venv
 COPY . /app
 WORKDIR /app
 RUN ls
-ENTRYPOINT ["/venv/bin/python3", "index.py"]
+ENTRYPOINT ["/venv/bin/python3", "./index.py"]
